--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "bootstrap": "^4.6.2",
     "bootstrap-vue": "^2.22.0",
+    "console": "^0.7.2",
     "core-js": "^3.25.3",
     "moment": "^2.29.4",
     "node": "^21.2.0",
