--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "node": "^21.2.0",
     "nodemon": "^3.0.2",
     "nuxt": "^2.15.8",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
