--- a/package.json
+++ b/package.json
@@ -35,8 +35,6 @@
     "sass": "^1.82.0",
     "sass-loader": "^10.4.1",
     "vue-jest": "^3.0.4",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
+    "webpack": "4.46.0"
   }
 }
